gccida/g2/subreg_hard_regno
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subreg_hard_regno/src/emit-rtl.c:1253:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subreg_hard_regno/src/emit-rtl.c:1259:52: error: use of undeclared identifier 'machine_mode'
if ( check_mode && !ix86_hard_regno_mode_ok( v5, ( machine_mode)*( unsigned __int8 *)( v3.rtwint + 2)) ) 
                                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subreg_hard_regno/src/obj/emit-rtl.o] Error 1
